# tether-recall

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml
agent/: intent-card.json
src/: lib.rs  main.rs  protocol.rs  requester.rs  responder.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac7.rs  mocks.rs  proptest_invariants.rs
tests/mocks/: ac6.rs
