[package]
name = "tether-recall"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false
description = "Fleet bus proxy for recall memory queries — makes the laptop's recall store legible from the work node"

[[bin]]
name = "wm-tether-recall"
path = "src/main.rs"

[lib]
name = "tether_recall"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_must_use = "deny"
unreachable_pub = "allow"

[lints.clippy]
# Strict everyday lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# BAD_RUST-aligned restrictions: error on dishonest patterns
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "warn"
mem_forget = "deny"
as_conversions = "warn"
float_arithmetic = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"

# Tame pedantic noise without weakening BAD_RUST coverage
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# NATS async client
async-nats = "0.38"
# Async runtime
tokio = { version = "1", features = ["full"] }
# SIGPIPE fix
sigpipe = "0.1"
# UUID for req_id
uuid = { version = "1", features = ["v4"] }
# Error handling
anyhow = "1"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Futures utilities (StreamExt for async-nats Subscriber)
futures-util = "0.3"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
